<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dimen10">

    <ImageView
        android:id="@+id/iv_bg_author"
        android:layout_width="@dimen/dimen32"
        android:layout_height="@dimen/dimen32"
        android:src="@drawable/bg_user_initial"
        app:layout_constraintBottom_toBottomOf="@id/tv_author_initial"
        app:layout_constraintEnd_toEndOf="@id/tv_author_initial"
        app:layout_constraintStart_toStartOf="@id/tv_author_initial"
        app:layout_constraintTop_toTopOf="@id/tv_author_initial" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_author_initial"
        style="@style/TextViewRobotoBold16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen20"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="D" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_author_name"
        style="@style/TextViewRobotoBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen16"
        app:layout_constraintStart_toEndOf="@id/iv_bg_author"
        app:layout_constraintTop_toTopOf="@id/iv_bg_author"
        tools:text="Iqbal Fauzi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_comment_body"
        style="@style/TextViewRobotoRegular12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen4"
        android:layout_marginEnd="@dimen/dimen20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_author_name"
        app:layout_constraintTop_toBottomOf="@id/tv_author_name"
        tools:text="laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_like"
        style="@style/TextViewRobotoBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toStartOf="@id/tv_comment_body"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_body"
        android:text="@string/action_like" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reply"
        style="@style/TextViewRobotoBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen4"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toEndOf="@id/tv_like"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_body"
        android:text="@string/action_reply" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_report"
        style="@style/TextViewRobotoBold12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen4"
        android:textColor="@color/grey_500"
        app:layout_constraintStart_toEndOf="@id/tv_reply"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_body"
        android:text="@string/action_report" />

</androidx.constraintlayout.widget.ConstraintLayout>