<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen20"
            android:paddingVertical="@dimen/dimen16"
            android:text="@string/label_profile"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/font24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="@dimen/dimen80"
        android:layout_height="@dimen/dimen80"
        android:layout_marginTop="@dimen/dimen20"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_profile"
        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
        app:srcCompat="@drawable/ironman" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_username"
        style="@style/TextViewRobotoBold14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen8"
        android:drawablePadding="@dimen/dimen8"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_profile"
        tools:text="Iqbal Fauzi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        style="@style/TextViewRobotoRegular14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:drawablePadding="@dimen/dimen8"
        android:gravity="center_vertical"
        android:textColor="@color/grey_900"
        app:drawableStartCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="iqbal.fauzi.if99@gmail.com" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_company"
        style="@style/TextViewRobotoRegular14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:drawablePadding="@dimen/dimen8"
        android:gravity="center_vertical"
        android:textColor="@color/grey_900"
        app:drawableStartCompat="@drawable/ic_work"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:text="Kumparan" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        style="@style/TextViewRobotoRegular14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen8"
        android:drawablePadding="@dimen/dimen8"
        android:gravity="center_vertical"
        android:textColor="@color/grey_900"
        app:drawableStartCompat="@drawable/ic_place"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        tools:text="Victor Plains Street, Suite 879, Wisokyburgh City" />

    <View
        android:id="@+id/view_profile"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_wa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/dimen20"
        app:layout_constraintEnd_toStartOf="@id/cl_ig"
        app:layout_constraintStart_toStartOf="@id/view_profile"
        app:layout_constraintTop_toBottomOf="@id/view_profile">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_contact_me"
            style="@style/TextViewRobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/action_whatsapp"
            android:textColor="@color/grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_wa"
            android:layout_width="@dimen/dimen48"
            android:layout_height="@dimen/dimen48"
            android:layout_marginTop="@dimen/dimen12"
            app:layout_constraintEnd_toEndOf="@id/tv_contact_me"
            app:layout_constraintStart_toStartOf="@id/tv_contact_me"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_me"
            app:srcCompat="@drawable/ic_wa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_social_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dimen12"
        android:background="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_social"
        app:layout_constraintTop_toBottomOf="@id/view_profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/dimen20"
        app:layout_constraintStart_toEndOf="@id/cl_wa"
        app:layout_constraintEnd_toEndOf="@id/view_profile"
        app:layout_constraintTop_toBottomOf="@id/view_profile">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ig"
            style="@style/TextViewRobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/action_my_ig"
            android:textColor="@color/grey_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_ig"
            android:layout_width="@dimen/dimen48"
            android:layout_height="@dimen/dimen48"
            android:layout_marginTop="@dimen/dimen12"
            app:layout_constraintEnd_toEndOf="@id/tv_ig"
            app:layout_constraintStart_toStartOf="@id/tv_ig"
            app:layout_constraintTop_toBottomOf="@id/tv_ig"
            app:srcCompat="@drawable/ic_ig" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_social"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dimen20"
        android:background="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_wa" />

</androidx.constraintlayout.widget.ConstraintLayout>